<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/game_title"
        android:textColor="@color/primary"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Score Section -->
    <LinearLayout
        android:id="@+id/scoreLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <TextView
            android:id="@+id/tvPlayerXScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/player_x_score"
            android:textColor="@color/player_x_color"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Player X: 0" />

        <TextView
            android:id="@+id/tvPlayerOScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_o_score"
            android:textColor="@color/player_o_color"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="Player O: 0" />
    </LinearLayout>

    <!-- Status TextView -->
    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/player_x_turn"
        android:textColor="@color/text_primary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scoreLayout" />

    <!-- Game Board Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardBoard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="24dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toTopOf="@id/btnPlayAgain"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvStatus"
        app:layout_constraintWidth_percent="0.85">

        <!-- 3x3 Grid Layout -->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:columnCount="3"
            android:rowCount="3"
            android:background="@color/board_background">

            <!-- Row 1 -->
            <Button
                android:id="@+id/btn0"
                style="@style/BoardButton"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />

            <Button
                android:id="@+id/btn1"
                style="@style/BoardButton"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />

            <Button
                android:id="@+id/btn2"
                style="@style/BoardButton"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />

            <!-- Row 2 -->
            <Button
                android:id="@+id/btn3"
                style="@style/BoardButton"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />

            <Button
                android:id="@+id/btn4"
                style="@style/BoardButton"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />

            <Button
                android:id="@+id/btn5"
                style="@style/BoardButton"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />

            <!-- Row 3 -->
            <Button
                android:id="@+id/btn6"
                style="@style/BoardButton"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />

            <Button
                android:id="@+id/btn7"
                style="@style/BoardButton"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />

            <Button
                android:id="@+id/btn8"
                style="@style/BoardButton"
                android:layout_row="2"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />
        </GridLayout>
    </androidx.cardview.widget.CardView>

    <!-- Play Again Button -->
    <Button
        android:id="@+id/btnPlayAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:paddingHorizontal="32dp"
        android:paddingVertical="12dp"
        android:text="@string/play_again"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
